--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "hbs": "^4.0.1",
     "mongoose": "^5.2.10",
     "morgan": "^1.9.0",
+    "node-fetch": "^2.6.0",
     "node-sass-middleware": "^0.11.0",
     "passport": "^0.4.1",
     "passport-github": "^1.1.0",
